# Algorithm

./: CMakeLists.txt
data/: IntegerArray.h
search/: BinarySearch.c  BinarySearch.h
sort/: BinaryInsertionSort.c  BinaryInsertionSort.h  BubbleSort.c  BubbleSort.h  InsertionMergeSort.c  InsertionMergeSort.h  InsertionSort.c  InsertionSort.h  MergeSort.c  MergeSort.h  SelectionSort.c  SelectionSort.h
test/: testBinaryInsertionSort.c  testBinarySearch.c  testBubbleSort.c  testInsertionMergeSort.c  testInsertionSort.c  testMergeSort.c  testSelectionSort.c
